add react login screen

--- a/be/src/main/resources/public/index.html
+++ b/be/src/main/resources/public/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+<link rel="stylesheet" href="styles/sidebar.css">
+
+<div id="app"/>
+
 <script src="/webjars/fe/0.0.1-SNAPSHOT/app-bundle.js"></script>
 </body>
 </html>
